pagination bugs fixed

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@ body {
   color: #ffffff !important;
 }
 
+.activeTab {
+  color: white;
+  background-color: #3366ff;
+}
+
 .pagination {
   display: flex;
 }
