--- a/src/assets/icon-fonts/icons.css
+++ b/src/assets/icon-fonts/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?fnk8tv");
-  src: url("fonts/icomoon.eot?fnk8tv#iefix") format("embedded-opentype"),
-    url("fonts/icomoon.ttf?fnk8tv") format("truetype"),
-    url("fonts/icomoon.woff?fnk8tv") format("woff"),
-    url("fonts/icomoon.svg?fnk8tv#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?aj6ivn");
+  src: url("fonts/icomoon.eot?aj6ivn#iefix") format("embedded-opentype"),
+    url("fonts/icomoon.ttf?aj6ivn") format("truetype"),
+    url("fonts/icomoon.woff?aj6ivn") format("woff"),
+    url("fonts/icomoon.svg?aj6ivn#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,6 +12,7 @@
 
 [class^="icon-"],
 [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   speak-as: never;
   font-style: normal;
@@ -20,6 +21,7 @@
   text-transform: none;
   line-height: 1;
 
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -33,7 +35,7 @@
 }
 .icon-arrow-right:before {
   content: "\e902";
-  color: #979797;
+  color: #c4cdd5;
 }
 .icon-eye .path1:before {
   content: "\e905";
@@ -65,9 +67,11 @@
   content: "\e90c";
   color: #b1b1b8;
 }
+.icon-plus:before {
+  content: "\e90d";
+}
 .icon-search:before {
   content: "\e90f";
-  color: #b1b1b8;
 }
 .icon-sponsor .path1:before {
   content: "\e910";
