Folder structure improved

--- a/src/assets/icon-fonts/icons.css
+++ b/src/assets/icon-fonts/icons.css
@@ -35,7 +35,7 @@
 }
 .icon-arrow-right:before {
   content: "\e902";
-  color: #c4cdd5;
+  color: #979797;
 }
 .icon-eye .path1:before {
   content: "\e905";
