--- a/src/assets/icon-fonts/icons.css
+++ b/src/assets/icon-fonts/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?aj6ivn");
-  src: url("fonts/icomoon.eot?aj6ivn#iefix") format("embedded-opentype"),
-    url("fonts/icomoon.ttf?aj6ivn") format("truetype"),
-    url("fonts/icomoon.woff?aj6ivn") format("woff"),
-    url("fonts/icomoon.svg?aj6ivn#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?c1vdr7");
+  src: url("fonts/icomoon.eot?c1vdr7#iefix") format("embedded-opentype"),
+    url("fonts/icomoon.ttf?c1vdr7") format("truetype"),
+    url("fonts/icomoon.woff?c1vdr7") format("woff"),
+    url("fonts/icomoon.svg?c1vdr7#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,6 +26,83 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-big-left1:before {
+  content: "\e903";
+}
+.icon-arrow-left1:before {
+  content: "\e904";
+  color: #979797;
+}
+.icon-arrow-right1:before {
+  content: "\e907";
+  color: #c4cdd5;
+}
+.icon-clean:before {
+  content: "\e90e";
+  color: #b2b7c1;
+}
+.icon-edit:before {
+  content: "\e912";
+  color: #3365fc;
+}
+.icon-eye1 .path1:before {
+  content: "\e914";
+  color: rgb(51, 102, 255);
+  opacity: 0.4;
+}
+.icon-eye1 .path2:before {
+  content: "\e915";
+  margin-left: -1em;
+  color: rgb(51, 102, 255);
+}
+.icon-filter-icon1:before {
+  content: "\e917";
+  color: #3365fc;
+}
+.icon-flag-icon-11:before {
+  content: "\e918";
+  color: #edc700;
+}
+.icon-flag-icon-21:before {
+  content: "\e919";
+  color: #4c6fff;
+}
+.icon-flag-icon-31:before {
+  content: "\e91a";
+  color: #ed7200;
+}
+.icon-log-out1:before {
+  content: "\e91b";
+  color: #b1b1b8;
+}
+.icon-plus1:before {
+  content: "\e91c";
+}
+.icon-save:before {
+  content: "\e91d";
+  color: #fff;
+}
+.icon-search1:before {
+  content: "\e91e";
+}
+.icon-sponsor1 .path1:before {
+  content: "\e91f";
+  color: rgb(46, 91, 255);
+  opacity: 0.4;
+}
+.icon-sponsor1 .path2:before {
+  content: "\e920";
+  margin-left: -0.875em;
+  color: rgb(46, 91, 255);
+}
+.icon-trash:before {
+  content: "\e921";
+  color: #ff4945;
+}
+.icon-user-icon1:before {
+  content: "\e922";
+  color: #f1f1f3;
+}
 .icon-arrow-big-left:before {
   content: "\e900";
 }
@@ -35,7 +112,7 @@
 }
 .icon-arrow-right:before {
   content: "\e902";
-  color: #979797;
+  color: #c4cdd5;
 }
 .icon-eye .path1:before {
   content: "\e905";
