--- a/src/assets/icon-fonts/icons.css
+++ b/src/assets/icon-fonts/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?qdk51");
-  src: url("fonts/icomoon.eot?qdk51#iefix") format("embedded-opentype"),
-    url("fonts/icomoon.ttf?qdk51") format("truetype"),
-    url("fonts/icomoon.woff?qdk51") format("woff"),
-    url("fonts/icomoon.svg?qdk51#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?ycjjc6");
+  src: url("fonts/icomoon.eot?ycjjc6#iefix") format("embedded-opentype"),
+    url("fonts/icomoon.ttf?ycjjc6") format("truetype"),
+    url("fonts/icomoon.woff?ycjjc6") format("woff"),
+    url("fonts/icomoon.svg?ycjjc6#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,6 +12,7 @@
 
 [class^="icon-"],
 [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   speak-as: never;
   font-style: normal;
@@ -19,6 +20,8 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -40,11 +43,10 @@
 }
 .icon-close:before {
   content: "\e904";
-  color: black;
+  color: #b2b7c1;
 }
 .icon-edit:before {
   content: "\e905";
-  color: #3365fc;
 }
 .icon-eye .path1:before {
   content: "\e906";
