--- a/src/assets/icon-fonts/icons.css
+++ b/src/assets/icon-fonts/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?ycjjc6");
-  src: url("fonts/icomoon.eot?ycjjc6#iefix") format("embedded-opentype"),
-    url("fonts/icomoon.ttf?ycjjc6") format("truetype"),
-    url("fonts/icomoon.woff?ycjjc6") format("woff"),
-    url("fonts/icomoon.svg?ycjjc6#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?etqgdw");
+  src: url("fonts/icomoon.eot?etqgdw#iefix") format("embedded-opentype"),
+    url("fonts/icomoon.ttf?etqgdw") format("truetype"),
+    url("fonts/icomoon.woff?etqgdw") format("woff"),
+    url("fonts/icomoon.svg?etqgdw#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,7 +12,6 @@
 
 [class^="icon-"],
 [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   speak-as: never;
   font-style: normal;
@@ -21,7 +20,6 @@
   text-transform: none;
   line-height: 1;
 
-  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -37,73 +35,88 @@
   content: "\e902";
   color: #c4cdd5;
 }
-.icon-clean:before {
+.icon-calendar:before {
   content: "\e903";
-  color: #b2b7c1;
+}
+.icon-checkedIcon .path1:before {
+  content: "\e904";
+  color: rgb(0, 0, 0);
+}
+.icon-checkedIcon .path2:before {
+  content: "\e905";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.icon-clean:before {
+  content: "\e906";
+  color: #3366FF;
 }
 .icon-close:before {
-  content: "\e904";
+  content: "\e907";
   color: #b2b7c1;
 }
 .icon-edit:before {
-  content: "\e905";
+  content: "\e908";
 }
 .icon-eye .path1:before {
-  content: "\e906";
+  content: "\e909";
   color: rgb(51, 102, 255);
   opacity: 0.4;
 }
 .icon-eye .path2:before {
-  content: "\e907";
+  content: "\e90a";
   margin-left: -1em;
   color: rgb(51, 102, 255);
 }
+.icon-eye2:before {
+  content: "\e90b";
+}
 .icon-filter-icon:before {
-  content: "\e909";
+  content: "\e90d";
   color: #3365fc;
 }
 .icon-flag-icon-1:before {
-  content: "\e90a";
+  content: "\e90e";
   color: #edc700;
 }
 .icon-flag-icon-2:before {
-  content: "\e90b";
+  content: "\e90f";
   color: #4c6fff;
 }
 .icon-flag-icon-3:before {
-  content: "\e90c";
+  content: "\e910";
   color: #ed7200;
 }
 .icon-log-out:before {
-  content: "\e90d";
+  content: "\e911";
   color: #b1b1b8;
 }
 .icon-plus:before {
-  content: "\e90e";
+  content: "\e912";
 }
 .icon-save:before {
-  content: "\e90f";
+  content: "\e913";
   color: #fff;
 }
 .icon-search:before {
-  content: "\e910";
+  content: "\e914";
   color: #b1b1b8;
 }
 .icon-sponsor .path1:before {
-  content: "\e911";
+  content: "\e915";
   color: rgb(46, 91, 255);
   opacity: 0.4;
 }
 .icon-sponsor .path2:before {
-  content: "\e912";
+  content: "\e916";
   margin-left: -0.875em;
   color: rgb(46, 91, 255);
 }
 .icon-trash:before {
-  content: "\e913";
+  content: "\e917";
   color: #ff4945;
 }
 .icon-user-icon:before {
-  content: "\e914";
+  content: "\e918";
   color: #f1f1f3;
 }
