--- a/src/assets/icon-fonts/icons.css
+++ b/src/assets/icon-fonts/icons.css
@@ -33,7 +33,7 @@
 }
 .icon-arrow-right:before {
   content: "\e902";
-  color: #c4cdd5;
+  color: #979797;
 }
 .icon-calendar:before {
   content: "\e903";
